k8s/k8s-prod/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-deployment
  labels:
    component: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: account-service
  template:
    metadata:
      labels:
        component: account-service
    spec:
      containers:
        - name: account-service
          image: pfa-account-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: account-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: account-service
  ports:
    - port: 8080
      targetPort: 8080
