k8s/k8s-prod/common-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service-deployment
  labels:
    component: common-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: common-service
  template:
    metadata:
      labels:
        component: common-service
    spec:
      containers:
        - name: common-service
          image: harbor.home:9443/library/common-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: common-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: common-service
  ports:
    - port: 8080
      targetPort: 8080
