k8s/k8s-prod/infra-services.yaml
# Because backend Service has no selector, the corresponding Endpoints object is not created automatically.
# You can manually map the Service to the network address and port where it's running, by adding an Endpoints object manually
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
subsets:
  - addresses:
      - ip: 192.168.86.43
    ports:
      - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-service
subsets:
  - addresses:
      - ip: 192.168.86.43
    ports:
      - port: 6379
