k8s/k8s-prod/stock-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
  labels:
    component: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock-service
  template:
    metadata:
      labels:
        component: stock-service
    spec:
      containers:
        - name: stock-service
          image: harbor.home:9443/library/stock-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: stock-service
  ports:
    - port: 8080
      targetPort: 8080
