k8s/k8s-prod/ingress-service-traefic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 3000
          - path: /api/account
            pathType: Prefix
            backend:
              service:
                name: account-service-cluster-ip-service
                port:
                  number: 8080
          - path: /api/common
            pathType: Prefix
            backend:
              service:
                name: common-service-cluster-ip-service
                port:
                  number: 8080
          - path: /api/stock
            pathType: Prefix
            backend:
              service:
                name: stock-service-cluster-ip-service
                port:
                  number: 8080
          - path: /api/job
            pathType: Prefix
            backend:
              service:
                name: job-service-cluster-ip-service
                port:
                  number: 8080
